--- a/MobMove/MobMove/Boxes.xaml
+++ b/MobMove/MobMove/Boxes.xaml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:controls="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselView.FormsPlugin.Abstractions" x:Class="MobMove.Boxes" Title="Boxes" Icon="MobMenuCofT" >
 	<ContentPage.Content>
-        <Grid >
+        <AbsoluteLayout>
+        <Grid AbsoluteLayout.LayoutBounds="0, 0, 1, 1" AbsoluteLayout.LayoutFlags="All">
             <Image Source="MobBoxScrn" Aspect="Fill" HorizontalOptions="FillAndExpand" />
             <Grid>
                 <Grid.RowDefinitions>
@@ -16,7 +17,7 @@
                     <Entry Placeholder="Box Search" PlaceholderColor="#BBBBBB" FontSize="18" TextColor="Silver" VerticalOptions="Start" HorizontalOptions="CenterAndExpand" />
                     <Button x:Name="AddABox" Clicked="AddBoxButton_Clicked" ClassId="AddBox" WidthRequest="60" HeightRequest="40" FontSize="36" Text="" BorderColor="Transparent" BackgroundColor="Transparent" VerticalOptions="Start" HorizontalOptions="End"/>
                 </StackLayout>
-                <controls:CarouselViewControl Grid.Row="1" Orientation="Horizontal" ItemsSource="{Binding myBoxes}" ShowArrows="true" x:Name="CarouselBoxes">
+                <controls:CarouselViewControl Grid.Row="1" Orientation="Horizontal" Position="0" ItemsSource="{Binding myBoxes}" ShowArrows="true" x:Name="CarouselBoxes" PositionSelected="UpdateCurrentBox">
                     <controls:CarouselViewControl.ItemTemplate>
                         <DataTemplate>
                             <Grid>
@@ -26,18 +27,44 @@
                                     <RowDefinition Height="12" />
                                     <RowDefinition Height="5" />
                                 </Grid.RowDefinitions>
-                                <Label Grid.Row="0" TextColor="White" Text="{Binding Name}" FontSize="9" HorizontalOptions="Center" VerticalOptions="End" />
+                                <Label Grid.Row="0" TextColor="White" Text="{Binding Name}" FontSize="11" HorizontalOptions="Center" VerticalOptions="End" />
                                 <Image Grid.Row="1" Aspect="AspectFit" Source="BoxPic"/>
                                 <StackLayout Grid.Row="2" Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="Start">
-                                    <Label TextColor="White" Text="{Binding ItemQuantity}" FontSize="9"/>
-                                    <Label TextColor="White" Text="Items" FontSize="9"/>
+                                    <Label TextColor="White" Text="{Binding ItemQuantity}" FontSize="10"/>
+                                    <Label TextColor="White" Text="Items" FontSize="10"/>
                                 </StackLayout>
                             </Grid>
                         </DataTemplate>
                     </controls:CarouselViewControl.ItemTemplate>
                 </controls:CarouselViewControl>
                 <Label x:Name="BoxCountLabel" Grid.Row="2" Text="0 of 0" TextColor="Silver" FontSize="24" HorizontalOptions="Center" HorizontalTextAlignment="Center"/>
-                <!--ListView of items to be added here-->
+                <ListView Grid.Row="3" x:Name="itemListView" >
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid >
+                                <Grid.ColumnDefinitions>  
+                                    <ColumnDefinition Width="60" />  
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="20" />
+                                </Grid.ColumnDefinitions>    
+                                <Image Source="{Binding Photo}" Grid.Column="0" WidthRequest="50" />
+                                <StackLayout Grid.Column="1" Orientation="Horizontal" Spacing="10" >
+                                    <Label Text="{Binding Quantity}" FontSize="18" TextColor="White" />
+                                    <Label Text="{Binding Name}" FontSize="18" TextColor="White"/>
+                                </StackLayout>
+                                <Label Text="{Binding InBox}" Grid.Column="2" FontSize="18" TextColor="Black" />
+                                <Image Source="IconItemForward" Grid.Column="3" Aspect="AspectFit" >
+                                    <Image.GestureRecognizers>
+                                        <TapGestureRecognizer Tapped="OnNavigateButtonClicked" />
+                                    </Image.GestureRecognizers>
+                                </Image>
+                            </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+                </ListView>
                 <Image Grid.Row="4" Source="ButtonAddItem" HorizontalOptions="Center" >
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Tapped="AddItemButton_Clicked" />
@@ -45,5 +72,39 @@
                 </Image>
             </Grid>
         </Grid>
+        <!--OverLay for Entering a Box-->
+        <ContentView x:Name="overlay"
+               AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
+               AbsoluteLayout.LayoutFlags="All"
+               IsVisible="False"
+               BackgroundColor="#C0303030"
+               Padding="10, 0">
+            <StackLayout Orientation="Vertical" BackgroundColor="White" HeightRequest="170" WidthRequest="300" HorizontalOptions="Center" VerticalOptions="Start" Margin="0,10,0,0" >
+                <Label BackgroundColor="White" FontSize="18" FontAttributes="Bold" TextColor="Black" HorizontalOptions="Fill" VerticalTextAlignment="End" Text=" Add a Box" />
+                <Entry x:Name="EnteredName" Placeholder="Box Name Here" TextColor="Black" FontSize="14" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" WidthRequest="250" />
+                <Entry x:Name="EnteredCategory" Placeholder="Optional Category Name Here" TextColor="Black" FontSize="14" VerticalOptions="CenterAndExpand" HorizontalOptions="Center" WidthRequest="250" />
+                <StackLayout Orientation="Horizontal">
+                    <Button Text="Cancel" FontSize="14" FontAttributes="Bold" VerticalOptions="StartAndExpand" HorizontalOptions="Start" Clicked="OnCancelButtonClicked"/>
+                    <Button Text="OK" FontSize="14" FontAttributes="Bold" VerticalOptions="StartAndExpand" HorizontalOptions="EndAndExpand" Clicked="OnOKButtonClicked" />
+                </StackLayout>
+            </StackLayout>
+        </ContentView>
+        <!--OverLay for Boys Alert Message-->
+        <ContentView x:Name="BoysAlert"
+               AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
+               AbsoluteLayout.LayoutFlags="All"
+               IsVisible="False"
+               BackgroundColor="#C0303030"
+               Padding="10, 0">
+            <StackLayout Orientation="Vertical" BackgroundColor="White" HeightRequest="250" WidthRequest="300" HorizontalOptions="Center" VerticalOptions="Start" Margin="0,10,0,0" >
+                <Label BackgroundColor="White" FontSize="18" FontAttributes="Bold" TextColor="Black" HorizontalOptions="Fill" VerticalTextAlignment="End" Text=" Rub Out Dat Box" />
+                <Label x:Name="BoysMessage" FontSize="16" TextColor="Black" HorizontalOptions="Fill" VerticalOptions="Center" Margin="10,0,10,0" />
+                <StackLayout Orientation="Horizontal">
+                    <Image Source="AlertMobster" HorizontalOptions="CenterAndExpand" VerticalOptions="Center" WidthRequest="170"/>
+                    <Button Text="OK" FontSize="14" FontAttributes="Bold" VerticalOptions="EndAndExpand" HorizontalOptions="EndAndExpand" Clicked="OnBoysButtonClicked" />        
+                </StackLayout>
+            </StackLayout>
+        </ContentView>
+        </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
