--- a/MobMove/MobMove/ItemDetailPage.xaml
+++ b/MobMove/MobMove/ItemDetailPage.xaml
@@ -32,11 +32,11 @@
                     <ColumnDefinition Width="30" />
                 </Grid.ColumnDefinitions>
                 <Label BackgroundColor="#555555" Text="Item:" FontSize="24" TextColor="White" Grid.Row="1" Grid.Column="1" VerticalTextAlignment="Center" HorizontalTextAlignment="End" />
-                <Entry BackgroundColor="#555555" Placeholder="{Binding Name}" FontSize="18" TextColor="White" Grid.Row="1" Grid.Column="2" HorizontalTextAlignment="Start" />
+                <Entry BackgroundColor="#555555" Placeholder="{Binding Name}" PlaceholderColor="Silver" FontSize="18" TextColor="White" Grid.Row="1" Grid.Column="2" HorizontalTextAlignment="Start" />
                 <Label BackgroundColor="#555555" Text="Qty:" FontSize="24" TextColor="White" Grid.Row="2" Grid.Column="1" VerticalTextAlignment="Center" HorizontalTextAlignment="End" />
-                <Entry BackgroundColor="#555555" Keyboard="Numeric" Placeholder="{Binding Quantity}" FontSize="18" TextColor="White" Grid.Row="2" Grid.Column="2" HorizontalTextAlignment="Start" />
+                <Entry BackgroundColor="#555555" Keyboard="Numeric" Placeholder="{Binding Quantity}" PlaceholderColor="Silver" FontSize="18" TextColor="White" Grid.Row="2" Grid.Column="2" HorizontalTextAlignment="Start" />
                 <Label BackgroundColor="#555555" Text="Box:" FontSize="24" TextColor="White" Grid.Row="3" Grid.Column="1" VerticalTextAlignment="Center" HorizontalTextAlignment="End" />
-                <Entry BackgroundColor="#555555" Placeholder="{Binding InBox}" FontSize="18" TextColor="White" Grid.Row="3" Grid.Column="2" HorizontalTextAlignment="Start" />
+                <Entry BackgroundColor="#555555" Placeholder="{Binding InBox}" PlaceholderColor="Silver" FontSize="18" TextColor="White" Grid.Row="3" Grid.Column="2" HorizontalTextAlignment="Start" />
             </Grid>
             <Grid>
                 <Grid.RowDefinitions>
@@ -56,7 +56,7 @@
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Tapped="OnPictureClicked" />
                     </Image.GestureRecognizers>
-                <Editor BackgroundColor="#555555" FontSize="12" TextColor="Silver" Grid.Row="1" Grid.Column="3" />
+                <Editor BackgroundColor="#555555" FontSize="16" TextColor="Silver" Grid.Row="1" Grid.Column="3" Text="{Binding Description}" />
             </Grid>
         </StackLayout>
 	</ContentPage.Content>
